<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/toolbar"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/dog_placeholder_description"
        android:src="@drawable/dog_grey" />

    <com.cobeisfresh.azil.ui.custom_views.TypefaceTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingEnd="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingStart="15dp"
        android:paddingTop="36dp"
        android:text="@string/mypets_no_content_description_title"
        android:textColor="@color/taupe_gray"
        android:textSize="16sp" />

    <com.cobeisfresh.azil.ui.custom_views.TypefaceTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingEnd="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingStart="15dp"
        android:text="@string/mypets_no_content_description_message"
        android:textColor="@color/taupe_gray"
        android:textSize="16sp" />

</LinearLayout>