<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="104dp"
    android:layout_below="@id/toolbar"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:contentDescription="@string/icon_clear_search_input_description"
        android:src="@drawable/icon_clear_white"
        android:visibility="invisible" />

    <com.cobeisfresh.azil.ui.custom_views.TypefaceTextInputEditText
        android:id="@id/searchInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_toLeftOf="@id/clearButton"
        android:layout_toStartOf="@id/clearButton"
        android:hint="@string/search_hint"
        android:imeActionLabel="@string/cta_button"
        android:imeOptions="actionSearch"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:textColor="@color/taupe_gray"
        android:textColorHint="@color/gainsboro"
        android:textSize="16sp"
        android:theme="@style/EditTextFormStyle">

        <requestFocus />
    </com.cobeisfresh.azil.ui.custom_views.TypefaceTextInputEditText>

</RelativeLayout>