<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@id/errorLayout"
        layout="@layout/error_layout"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/dark_turquoise">

        <ImageView
            android:id="@id/iconBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/icon_back_description"
            android:padding="10dp"
            android:src="@drawable/icon_back" />

        <com.cobeisfresh.azil.ui.custom_views.TypefaceTextView
            android:id="@id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/registration_regular_button"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:id="@id/rootLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingEnd="34dp"
            android:paddingLeft="34dp"
            android:paddingRight="34dp"
            android:paddingStart="34dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@id/profileImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/profile_image_description"
                android:src="@drawable/profile_image_shape" />

            <com.cobeisfresh.azil.ui.custom_views.TypefaceTextInputEditText
                android:id="@id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registration_first_last_name"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:textColor="@color/taupe"
                android:textColorHint="@color/manatee"
                android:textSize="16sp"
                android:theme="@style/EditTextFormStyle" />

            <com.cobeisfresh.azil.ui.custom_views.TypefaceTextInputEditText
                android:id="@id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:hint="@string/registration_email_placeholder"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/taupe"
                android:textColorHint="@color/manatee"
                android:textSize="16sp"
                android:theme="@style/EditTextFormStyle" />

            <com.cobeisfresh.azil.ui.custom_views.TypefaceTextInputEditText
                android:id="@id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif"
                android:hint="@string/registration_password_placeholder"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/taupe"
                android:textColorHint="@color/manatee"
                android:textSize="16sp"
                android:theme="@style/EditTextFormStyle" />

            <com.cobeisfresh.azil.ui.custom_views.TypefaceTextInputEditText
                android:id="@id/retypePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif"
                android:hint="@string/registration_retype_password_placeholder"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/taupe"
                android:textColorHint="@color/manatee"
                android:textSize="16sp"
                android:theme="@style/EditTextFormStyle" />

            <com.cobeisfresh.azil.ui.custom_views.TypefaceTextView
                android:id="@id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/authorization_button_selector"
                android:enabled="false"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/registration_regular_button"
                android:textColor="@drawable/authorization_text_selector" />

            <com.cobeisfresh.azil.ui.custom_views.TypefaceTextView
                android:id="@id/termsAndConditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="22dp"
                android:text="@string/registration_terms_and_condition_link"
                android:textColor="@color/manatee"
                android:textSize="13sp" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>